# perspective

./: Cargo.toml  README.md
assets/: Grass.aseprite  WallTiles.aseprite
assets/maps/: world.toml
assets/models/: tile-basic.blend  tile-basic.blend1  tile.blend  tile.blend1  tile_basic.mtl  tiles.blend  tiles.blend1
examples/: compute.rs  render.rs  vertex.rs
examples/shaders/: basic_shader.wgsl  compute_shader.wgsl
examples/textures/: cat-sprite.aseprite
src/: batch.rs  builder.rs  camera.rs  canvas.rs  compute.rs  config.rs  core.rs  gfx.rs  instances.rs  interface.rs  lib.rs  main.rs  material.rs  prelude.rs  realhex.rs  render_pipeline.rs  renderer.rs  resources.rs  shapes.rs  sprite_loader.rs  spritepool.rs  state.rs  surface.rs  texture.rs  textures.rs  utility.rs  vertices.rs  wgpu_helper.rs
src/bindings/: buffer.rs  layout.rs  mod.rs
src/drawables/: tiles.rs
src/gfx/: bindgroups.rs  buffers.rs  build_core.rs  compute.rs  core.rs  corebuilder.rs  encoders.rs  mod.rs  pipeline.rs
src/map/: map_reader.rs  map_result.rs  map_value.rs  map_writer.rs  mod.rs
src/old/: config.rs
src/old_wgpu/: camera.rs  vertices.rs
src/position/: realpos.rs  tilepos.rs
src/processors/: compute.rs  mod.rs  render.rs
src/render/: buffer.rs  camera.rs  gui.rs  mod.rs  scenes.rs  sprites.rs  tiles.rs
src/resources/: ambient_light.rs  camera.rs  depth.rs  instances.rs  light.rs  mod.rs  point_light.rs  sprites.rs  textures.rs  timer.rs  uniform.rs
src/shaders/: compute_shader.wgsl  mod.rs  shader.wgsl  sprite_shader.wgsl
src/targets/: gui.rs  mod.rs  (+1 more)
(+33 files in other folders)
