[package]
name = "perspective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
env_logger = "*"
log = "*"
wgpu = "*"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
raw-window-handle = "0.5.0"
derive_builder = "*"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

